
	- Make sure every call to ECPGraise is logged.

Mon Oct  8 10:10:23 CEST 2001

	- Fix include file so library is binary compatible again.

Sun Oct 14 14:07:59 CEST 2001

	- Fixed GRANT statement.
	- Synced preproc.y with gram.y.

Thu Oct 18 12:57:04 CEST 2001

	- Added patch by Lee Kindness <lkindness@csl.co.uk> fixing several
	  bugs.

Fri Oct 19 16:32:06 CEST 2001

	- Removed "not yet fully implemented" warnig for nullif.

Sun Oct 21 14:19:42 CEST 2001

	- Synced preproc.y with gram.y.

Fri Nov  2 16:16:25 CET 2001

	- Synced preproc.y with gram.y.

Wed Nov 14 11:50:27 CET 2001

	- Added several patches by Christof Petig <christof.petig@wtal.de>.

Tue Dec  4 13:30:32 CET 2001

	- Fixed dumping of structures without indicators.

Wed Dec  5 12:27:25 CET 2001

	- Fixed variable handling in AT statement.
	- Fixed bug that caused segfault when given incorrect DB name.
	- Fixed bug in ecpglib causing indicator to list the size of the
	  variable instead of the size of the data

Thu Dec  6 14:02:56 CET 2001

	- Removed debug message from preproc.y.
	- Fixed some bugs in exec sql var and exec sql type command.

Sat Dec  8 21:35:45 CET 2001

	- Fix ecpg to allow pointer to structs.

Sun Dec  9 16:21:30 CET 2001

	- Fixed several bugs concerning indicators and added error messages
	  instead of segfaults.

Thu Dec 20 14:15:56 CET 2001

	- Removed space_or_nl and line_end from pgc.l.

Sun Dec 23 13:08:36 CET 2001

	- Fixed several bugs concerning arrays of structs including a memory
	  allocation bug.

Mon Jan  7 12:18:01 CET 2002

	- Fixed parser to accept initializing expressions starting with "(".

Tue Jan  8 15:16:37 CET 2002

	- Fixed array pointers, no longer using void *.

Thu Jan 10 11:12:14 CET 2002

	- Include sqlca.h automatically.

Fri Jan 11 15:43:39 CET 2002

	- clear sqlca on : [de]allocate descriptor  & get descriptor and set
	  sqlca.sqlerrd[2] accordingly (Christof).
	- Set ecpg version to 2.9.0.
        - Set library version to 3.3.0.